@@ -1,5 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
@@ -12,9 +12,11 @@
 
     <properties>
         <mock-server.version>5.15.0</mock-server.version>
-        <apache-poi.version>5.2.2</apache-poi.version>
-		<apache-arrow.version>16.0.0</apache-arrow.version>
+        <apache-poi.version>5.4.1</apache-poi.version>
+        <apache-arrow.version>18.2.0</apache-arrow.version>
         <apache-parquet.version>1.12.3</apache-parquet.version>
+        <prometheus-metrics.version>1.3.5</prometheus-metrics.version>
+        <openapi-generator.version>7.9.0</openapi-generator.version>
     </properties>
 
     <build>
@@ -50,22 +52,9 @@
                         <configuration>
                             <excludes>
                                 <exclude>tests/**/*</exclude>
+                                <exclude>com/bakdata/conquery/frontend/form/**/*</exclude>
                                 <exclude>com/bakdata/conquery/integration/ConqueryIntegrationTests</exclude>
                             </excludes>
-                        </configuration>
-                    </execution>
-                    <execution>
-                        <id>default-jar</id>
-                        <goals>
-                            <goal>jar</goal>
-                        </goals>
-                        <configuration>
-                            <archive>
-                                <manifestEntries>
-                                    <Add-Opens>java.base/java.lang ALL-UNNAMED java.base/java.util ALL-UNNAMED java.base/java.nio ALL-UNNAMED java.base/sun.nio.ch ALL-UNNAMED
-</Add-Opens>
-                                </manifestEntries>
-                            </archive>
                         </configuration>
                     </execution>
                 </executions>
@@ -89,6 +78,36 @@
                     </execution>
                 </executions>
             </plugin>
+            <plugin>
+                <groupId>org.openapitools</groupId>
+                <artifactId>openapi-generator-maven-plugin</artifactId>
+                <version>${openapi-generator.version}</version>
+                <executions>
+                    <execution>
+                        <id>openapi-admin</id>
+                        <goals>
+                            <goal>generate</goal>
+                        </goals>
+                        <configuration>
+                            <inputSpec>${project.basedir}/src/main/resources/openapi/admin-openapi.json</inputSpec>
+                            <!-- Don't use jaxrs-jersey here because it does not allow dependency injection -->
+                            <generatorName>jaxrs-spec</generatorName>
+                            <modelsToGenerate>ApiResponse</modelsToGenerate>
+                            <packageName>com.bakdata.conquery</packageName>
+                            <!-- This package name is used by EndpointTestHelper to filter out openapi specs -->
+                            <apiPackage>com.bakdata.conquery.models.api.openapi</apiPackage>
+                            <modelPackage>com.bakdata.conquery.models.config</modelPackage>
+                            <configOptions>
+                                <!-- The implementation of these interfaces actually allows us to use DI (not possible with jaxrs-jersey) -->
+                                <interfaceOnly>true</interfaceOnly>
+                                <sourceFolder>src/main/java</sourceFolder>
+                                <generateSupportingFiles>false</generateSupportingFiles>
+                                <useJakartaEe>true</useJakartaEe>
+                            </configOptions>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
     </build>
 
@@ -96,7 +115,11 @@
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-to-slf4j</artifactId>
-            <version>2.19.0</version>
+            <version>2.25.1</version>
+        </dependency>
+        <dependency>
+            <groupId>io.dropwizard</groupId>
+            <artifactId>dropwizard-json-logging</artifactId>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.module</groupId>
@@ -130,25 +153,14 @@
             <artifactId>jackson-module-parameter-names</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.github.power-libraries</groupId>
-            <artifactId>iopower</artifactId>
-            <version>1.1.3</version>
-        </dependency>
-        <dependency>
-            <groupId>commons-io</groupId>
-            <artifactId>commons-io</artifactId>
-            <version>2.11.0</version>
-        </dependency>
-        <dependency>
             <groupId>com.univocity</groupId>
             <artifactId>univocity-parsers</artifactId>
             <version>2.9.1</version>
         </dependency>
         <dependency>
-            <groupId>org.codehaus.groovy</groupId>
+            <groupId>org.apache.groovy</groupId>
             <artifactId>groovy</artifactId>
-            <version>3.0.13</version>
-            <classifier>indy</classifier>
+            <version>4.0.24</version>
         </dependency>
         <dependency>
             <groupId>org.apache.commons</groupId>
@@ -169,6 +181,7 @@
             <groupId>org.glassfish.jersey.media</groupId>
             <artifactId>jersey-media-multipart</artifactId>
         </dependency>
+
         <dependency>
             <groupId>io.dropwizard</groupId>
             <artifactId>dropwizard-http2</artifactId>
@@ -202,18 +215,14 @@
         <dependency>
             <groupId>org.apache.mina</groupId>
             <artifactId>mina-core</artifactId>
-            <version>2.1.5</version>
+            <version>2.2.4</version>
         </dependency>
         <dependency>
             <groupId>org.apache.shiro</groupId>
             <artifactId>shiro-core</artifactId>
-            <version>1.13.0</version>
+            <version>2.2.1</version>
             <exclusions>
                 <!-- All these transitive deps are already bundled in shiro core-->
-                <exclusion>
-                    <groupId>org.apache.shiro</groupId>
-                    <artifactId>shiro-cache</artifactId>
-                </exclusion>
                 <exclusion>
                     <groupId>org.apache.shiro</groupId>
                     <artifactId>shiro-config-ogdl</artifactId>
@@ -233,14 +242,6 @@
                 <exclusion>
                     <groupId>org.apache.shiro</groupId>
                     <artifactId>shiro-config-core</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>org.apache.shiro</groupId>
-                    <artifactId>shiro-event</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>org.apache.shiro</groupId>
-                    <artifactId>shiro-lang</artifactId>
                 </exclusion>
             </exclusions>
         </dependency>
@@ -264,23 +265,8 @@
             <version>1.3.232</version>
         </dependency>
         <dependency>
-            <groupId>com.tomgibara.bits</groupId>
-            <artifactId>bits</artifactId>
-            <version>2.1.0</version>
-        </dependency>
-        <dependency>
             <groupId>com.fasterxml.jackson.dataformat</groupId>
             <artifactId>jackson-dataformat-smile</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.zigurs.karlis.utils</groupId>
-            <artifactId>magicsort</artifactId>
-            <version>0.2</version>
-        </dependency>
-        <dependency>
-            <groupId>com.jakewharton.byteunits</groupId>
-            <artifactId>byteunits</artifactId>
-            <version>0.9.1</version>
         </dependency>
         <dependency>
             <groupId>org.mockito</groupId>
@@ -290,7 +276,7 @@
         <dependency>
             <groupId>com.auth0</groupId>
             <artifactId>java-jwt</artifactId>
-            <version>4.2.2</version>
+            <version>4.5.0</version>
         </dependency>
         <dependency>
             <groupId>io.dropwizard</groupId>
@@ -331,6 +317,12 @@
             <version>${apache-poi.version}</version>
         </dependency>
         <dependency>
+            <!-- Used by org.apache.poi.xssf.usermodel.XSSFWorkbook.newPackage -->
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.20.0</version>
+        </dependency>
+        <dependency>
             <groupId>org.apache.parquet</groupId>
             <artifactId>parquet-hadoop</artifactId>
             <version>${apache-parquet.version}</version>
@@ -354,40 +346,43 @@
         <dependency>
             <groupId>org.jooq</groupId>
             <artifactId>jooq</artifactId>
-            <version>3.18.3</version>
-        </dependency>
-        <dependency>
-            <groupId>org.jooq</groupId>
-            <artifactId>jooq-postgres-extensions</artifactId>
-            <version>3.18.3</version>
+            <version>3.20.2</version>
         </dependency>
         <dependency>
             <groupId>com.zaxxer</groupId>
             <artifactId>HikariCP</artifactId>
-            <version>5.0.1</version>
+            <version>7.1.0</version>
         </dependency>
         <dependency>
             <groupId>org.testcontainers</groupId>
             <artifactId>testcontainers</artifactId>
-            <version>1.17.6</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.testcontainers</groupId>
-            <artifactId>junit-jupiter</artifactId>
-            <version>1.17.6</version>
+            <artifactId>testcontainers-junit-jupiter</artifactId>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.testcontainers</groupId>
-            <artifactId>postgresql</artifactId>
-            <version>1.17.6</version>
+            <artifactId>testcontainers-clickhouse</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.testcontainers</groupId>
+            <artifactId>testcontainers-solr</artifactId>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>com.sap.cloud.db.jdbc</groupId>
             <artifactId>ngdbc</artifactId>
             <version>2.17.10</version>
+        </dependency>
+        <dependency>
+            <groupId>com.clickhouse</groupId>
+            <artifactId>clickhouse-jdbc</artifactId>
+            <version>0.9.8</version>
+            <classifier>all</classifier>
         </dependency>
         <dependency>
             <groupId>io.prometheus</groupId>
@@ -397,17 +392,43 @@
         <dependency>
             <groupId>io.prometheus</groupId>
             <artifactId>prometheus-metrics-simpleclient-bridge</artifactId>
-            <version>1.2.1</version>
+            <version>${prometheus-metrics.version}</version>
         </dependency>
         <dependency>
             <groupId>io.prometheus</groupId>
             <artifactId>prometheus-metrics-exporter-servlet-jakarta</artifactId>
-            <version>1.2.1</version>
+            <version>${prometheus-metrics.version}</version>
         </dependency>
         <dependency>
             <groupId>io.prometheus</groupId>
             <artifactId>prometheus-metrics-core</artifactId>
-            <version>1.2.1</version>
+            <version>${prometheus-metrics.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.openapitools</groupId>
+            <artifactId>openapi-generator-maven-plugin</artifactId>
+            <version>${openapi-generator.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.swagger.core.v3</groupId>
+            <artifactId>swagger-integration-jakarta</artifactId>
+            <version>2.2.25</version>
+        </dependency>
+        <dependency>
+            <groupId>io.swagger.core.v3</groupId>
+            <artifactId>swagger-jaxrs2-jakarta</artifactId>
+            <version>2.2.25</version>
+        </dependency>
+        <dependency>
+            <groupId>org.awaitility</groupId>
+            <artifactId>awaitility</artifactId>
+            <version>4.2.1</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.solr</groupId>
+            <artifactId>solr-solrj</artifactId>
+            <version>9.10.1</version>
         </dependency>
     </dependencies>
 </project>
